# 3d-behaviour-viewer

./: main.py  pyproject.toml  test_video_load.py
model/: inspect_states.py  train_ar_hmm.ipynb
notebooks/: inspect_features.py
utils/: file_helpers.py
