[project]
name = "3d-behaviour-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.17.7",
    "matplotlib>=3.10.7",
    "napari>=0.6.6",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "xarray>=2025.10.1",
]
